# OwnBot

./: README.md
maui-app/: App.xaml.cs  OwnBot.MAUI.csproj  README.md
zephyr-app/: CMakeLists.txt  placeholder.txt  prj.conf
zephyr-app/src/: main.c
